--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Simple setInterval clock</title>
+    <title>Stop Watch</title>
     <link rel="stylesheet" href="dist/tailwind.css">
   </head>
   <body>
