--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Stop Watch</title>
-    <link rel="stylesheet" href="dist/tailwind.css">
-  </head>
-  <body>
-      <button onclick="start()" class="btn1">Start</button>
-      <button onclick="stop()" class="btn2">Stop</button>
-      <button onclick="reset()" class="btn3">Reset</button>
-    <p></p>
+
+<head>
+  <meta charset="utf-8">
+  <title>StopWatch</title>
+  <link rel="stylesheet" href="dist/tailwind.css">
+</head>
+
+<body class="flex justify-center font-serif">
+  <div>
+    <span>
+      <header class="flex space-x-2 mt-16 p-6">
+
+        <h2 class="text-6xl text-transparent 
+    bg-clip-text bg-gradient-to-br from-blue-500 to-green-200">StopWatch</h2>
+
+        <svg class="w-16 h-22 fill-current text-blue-400" fill="none" stroke="none" stroke-linecap="round"
+          stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24">
+          <path
+            d="M18.3,8.59l.91-.9a1,1,0,0,0-1.42-1.42l-.9.91a8,8,0,0,0-9.79,0l-.91-.92A1,1,0,0,0,4.77,7.69l.92.91A7.92,7.92,0,0,0,4,13.5,8,8,0,1,0,18.3,8.59ZM12,19.5a6,6,0,1,1,6-6A6,6,0,0,1,12,19.5Zm-2-15h4a1,1,0,0,0,0-2H10a1,1,0,0,0,0,2Zm3,6a1,1,0,0,0-2,0v1.89a1.5,1.5,0,1,0,2,0Z">
+          </path>
+        </svg>
+      </header>
+    </span>
+    <span>
+      <p class="text-6xl p-6 text-center mr-16 tracking-widest"></p>
+    </span>
+    <span class="space-x-4 p-8 ml-4">
+      <button onclick="start()" class="btn1 rounded-full h-16 w-16 bg-green-400 text-blue-50 mt-6 font-bold">Start</button>
+      <button onclick="stop()" class="btn2 rounded-full h-16 w-16 bg-green-400 text-blue-50 font-bold">Stop</button>
+      <button onclick="reset()" class="btn3 rounded-full h-16 w-16 bg-green-400 text-blue-50 font-bold">Reset</button>
+    </span>
+
+    <footer>
+
+    </footer>
+
     <script src="stopwatch.js">
-     
+
     </script>
-  </body>
+</body>
+
 </html>
