--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </span>
         <span class="space-x-4 p-8 ml-">
             <button onclick="start()"
-                class="btn1 h-8 w-20 bg-green-400 text-blue-50 mt-6 font-bold rounded-full hover:bg-green-600 border-2 border-blue-300 focus:outline-none">Start</button>
+                class="btn1 h-8 w-20 bg-green-400 text-blue-50 mt-6 font-bold rounded-full hover:bg-green-600 border-2 border-blue-300 focus:outline-none transition-duration-300">Start</button>
             <button onclick="reset()"
-                class="btn3 h-8 w-16 bg-green-400 text-blue-50 font-bold rounded-full hover:bg-green-600 border-2 border-blue-300 focus:outline-none">Reset</button>
+                class="btn3 h-8 w-16 text-green-400 font-bold rounded-full border-2 border-blue-300 hover:bg-blue-50 focus:outline-none transition-duration-300">Reset</button>
         </span>
 
         <footer class="space-x-2 text-center">
