--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <title>StopWatch</title>
     <link rel="stylesheet" href="dist/tailwind.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
-<body class="font-serif">
+<body style="font-family: 'Nunito', sans-serif;">
     <div class="flex flex-col items-center justify-center h-[calc(100vh-46px)]">
         <header class="flex items-center space-x-2 p-6">
             <h2 class="text-6xl text-transparent bg-clip-text bg-gradient-to-br from-blue-500 to-green-200">
